--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ node_modules
 
 ### Plugins ###
 /wp-content/db.php
+/wp-content/plugins/wp-dummy-content-generator/
 
 ### Backups Files ###
 # List the backup files here
